--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -8,13 +8,18 @@
   margin: 0 0 2rem;
 }
 
-.flex {
+.landingBody {
   display: flex;
+  flex-direction: column-reverse;
 }
 
 .intro p {
   margin: 0 0 2rem;
   line-height: 1.5rem;
+}
+
+.directory {
+  margin-bottom: 2rem;
 }
 
 .directory a {
@@ -45,8 +50,13 @@
     max-width: 800px;
   }
 
+  .title {
+    width: 80%;
+  }
+
   .landingBody {
     display: flex;
+    flex-direction: row;
   }
 
   .intro {
